--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "jest": "^27.5.1",
-    "uniqid": "^5.4.0"
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
